添加第二章测试

--- a/md/SSPW001/riki/02A.md
+++ b/md/SSPW001/riki/02A.md
@@ -46,87 +46,87 @@
 
 20. `1分` 如有变化，请提前告诉我。
 
-21. `1分` 地震时我在18楼，摇得那么厉害，根本就站不住。
+21. `1分` 以后要向您多多讨教。
 
-22. `1分` 颠倒黑白。
+    `1分` 以后要请您多多指教。
 
-23. `1分` 他在海外奋斗了5年，终于站住脚了。
+22. `1分` 别害怕，有我在。
 
-24. `1分` 他推倒了大树。
+23. `1分` 恐怕到现在他还不知道。
 
-25. `1分` 他举出了很多证据。
+24. `1分` 我在中国住了五年，对那里产生了感情。
 
-26. `1分` 使自己从斤斤计较的心情中解放出来。
+25. `1分` 不巧遇上了大雨，真扫兴。
 
-27. `1分` 我没有她那么开放。
+26. `1分` 祝贵公司事业兴旺。
 
-28. `1分` 这本书太大了，我的书包放不下。
+27. `1分` 最近看上去好精神。
 
-29. `1分` 请你帮我拿个主意吧。
+28. `1分` 他讨（娶）了一个美国老婆。
 
-30. `1分` 请明天5点叫醒我。
+29. `1分` 我很讨厌这种拍马屁的人。
 
-31. `2分` 笑纳
+30. `2分` 敢做敢当
 
-32. `2分` 看孩子
+31. `2分` 看孩子
 
-33. `2分` 问卷调查
+32. `2分` 问卷调查
 
-34. `1分` 吹牛
+33. `1分` 吹牛
 
     `1分` 吹口琴
 
-35. `2分` 吹捧
+34. `2分` 吹捧
 
-36. `2分` 七上八下
+35. `2分` 七上八下
 
-37. `2分` 单子
+36. `2分` 单子
 
-38. `2分` 账户
+37. `2分` 账户
 
-39. `2分` 高见
+38. `2分` 高见
 
-40. `2分` 听说
+39. `2分` 听说
 
-41. `2分` 叫好不叫座
+40. `2分` 叫好不叫座
 
-42. `2分` 帮了倒忙
+41. `2分` 帮了倒忙
 
-43. `2分` 挑重担
+42. `2分` 挑重担
 
-44. `2分` 背井离乡
+43. `2分` 背井离乡
 
-45. `2分` 蜡烛
+44. `2分` 蜡烛
 
-46. `2分` 看足球
+45. `2分` 看足球
 
-47. `2分` 小看、看不起
+46. `2分` 小看、看不起
 
-48. `2分` 后背
+47. `2分` 后背
 
-49. `2分` 背叛
+48. `2分` 背叛
 
-50. `2分` 挑食
+49. `2分` 挑食
 
-51. `2分` 站、车站
+50. `2分` 站、车站
 
-52. `2分` 举办
+51. `2分` 举办
 
-53. `2分` 放假、休假
+52. `2分` 放假、休假
 
-54. `2分` 吹拉弹唱
+53. `2分` 吹拉弹唱
 
-55. `2分` 吹口哨
+54. `2分` 吹口哨
 
-56. `2分` 叫花子、叫化子、乞丐、要饭的
+55. `2分` 叫花子、叫化子、乞丐、要饭的
 
-57. `2分` 叫卖
+56. `2分` 叫卖
 
-58. `2分` 叫好、喝**彩**
+57. `2分` 叫好、喝**彩**
 
-59. `2分` 问好
+58. `2分` 问好
 
-60. `2分` 上当
+59. `2分` 上当
 
 
 
