--- a/md/SSPW001/riki/02Q.md
+++ b/md/SSPW001/riki/02Q.md
@@ -83,47 +83,45 @@
 
 ## 二、阅读
 
-21. 地震の時１８階にいました。すごく揺れていたので、まったく立っていられませんでした。
+21. これからご指導のほどよろしくお願いいたします。【二つの言い方】
 
     **翻译：**`________________________________________________________________________` **。**
 
-22. 事実を曲げる。
+    **翻译：**`________________________________________________________________________` **。**
+
+23. 怖がらないで、私がついているから。
 
     **翻译：**`________________________________________________________________________` **。**
 
-23. 彼は海外で５年間努力して、やっと地に足がつきました。
+24. おそらく今でも彼はまだ知りません。
 
     **翻译：**`________________________________________________________________________` **。**
 
-24. 彼は大きな木を押し倒しました。
+25. 私は中国で五年間暮らして、愛着があります。
 
     **翻译：**`________________________________________________________________________` **。**
 
-25. 彼はたくさんの証拠を出しました。
+26. あいにく雨に降られて、興ざめだ。
 
     **翻译：**`________________________________________________________________________` **。**
 
-26. 細かいことにけちけちする気持ちから自由になりましょう。
+27. 貴社の益々のご発展を心よりお祈りいたします。
 
     **翻译：**`________________________________________________________________________` **。**
 
-27. 私は彼女のように自由奔放ではありません。
+28. 最近元気そうですね。
 
     **翻译：**`________________________________________________________________________` **。**
 
-28. この本は大きすぎて、私のカバンに入りません。
+29. 彼はアメリカ人の嫁をもらいました。
 
     **翻译：**`________________________________________________________________________` **。**
 
-29. 決めてくれませんか。
+30. 私はこのようなごまをする人が嫌いです。
 
     **翻译：**`________________________________________________________________________` **。**
 
-30. 明日５時に起こしてください。
-
-    **翻译：**`________________________________________________________________________` **。**
-
-31. 这是我从中国带来的小礼物，请伊藤哥 xiào nà ( `________` ) 。
+31. 大丈夫 gǎn zuò gǎn dāng ( `________` ) 。
 
 32. 我来上课时，我先生帮我 kān hái zi ( `________` ) 。
 
