完成伊藤试题

--- a/md/SSPW001/riki/02Q.md
+++ b/md/SSPW001/riki/02Q.md
@@ -6,177 +6,126 @@
 
 [TOC]
 
-## 一、听力
+## 一、听写
 
-<iframe height="45" width="260" src="https://www.ximalaya.com/thirdparty/player/sound/player.html?id=241694633&type=red" frameborder=0 allowfullscreen></iframe>
-1. **从对话中我们可以推测出什么？**
-
-   A. 小李和小王吹了
-
-   B. 小李和小王结婚了
-
-   C. 小李和小王还没办婚礼
-
-2. **从对话中我们可以推测出什么？**
-
-   A. 小李和小王上个月去冲绳旅游了
-
-   B. 小李和小王上个月没去冲绳旅游
-
-   C. 小李和小王这个月打算去冲绳旅游
-
-3. **从对话中我们可以推测出什么？**
-
-   A. 小李会说６门外语
-
-   B. 小李和小陈吹了
-
-   C. 小陈很受欢迎
-
-4. **从对话中我们可以推测出什么？**
-
-   A. 小李的成绩拿不到今年的奖学金
-
-   B. 小李的成绩拿不到明年的奖学金
-
-   C. 小李的学习方法没有问题
-
-5. **从对话中我们可以推测出什么？**
-
-   A. 小李还没看过医生
-
-   B. 小李今天去看医生
-
-   C. 小李明天去看医生
-
-6. **他每年春节回老家** `________` **父母。**
-
-7. **她实在没有出路，就寻了** `________` **。**
-
-8. **他能做到这一步就很不错了，你别** `________________________` **了。**
-
-9. **我要换衣服，你** `________` **。**
-
-10. **有意见，请当面提出来，不要在背后** `________` **。**
-
-11. **听写：**`________________________________________________________________________` **。**
-
-12. **听写：**`________________________________________________________________________` **。**
-
-13. **听写：**`________________________________________________________________________` **。**
-
-14. **听写：**`________________________________________________________________________` **。**
-
-15. **听写：**`________________________________________________________________________` **。**
-
-16. **听写：**`________________________________________________________________________` **。**
-
-17. **听写：**`________________________________________________________________________` **。**
-
-18. **听写：**`________________________________________________________________________` **。**
-
-19. **听写：**`________________________________________________________________________` **。**
-
-20. **听写：**`________________________________________________________________________` **。**
+1. **看到她伤心的样子，我真的 `________` 。**
+2. **他每天总是乐呵呵的，`________` 。**
+3. **`________`！**
+4. **他们组织了一个 `________` 。**
+5. **他贪图享乐，`________` **。
+6. **`________________________________________________________________________` **。
+7. **`________________________________________________________________________` **。
+8. **`________________________________________________________________________` **。
+9. **`________________________________________________________________________` **。
+10. **`________________________________________________________________________` **。
+11. **`________________________________________________________________________` **。
+12. **`________________________________________________________________________` **。
+13. **`________________________________________________________________________` **。
+14. **`________________________________________________________________________` **。
+15. **`________________________________________________________________________` **。
 
 
 
-## 二、阅读
+## 二、翻译
 
-21. これからご指導のほどよろしくお願いいたします。【二つの言い方】
+16. これからご指導のほどよろしくお願いいたします。【一つ目の言い方】
 
-    **翻译：**`________________________________________________________________________` **。**
+    **`________________________________________________________________________` **。
 
-    **翻译：**`________________________________________________________________________` **。**
+22. これからご指導のほどよろしくお願いいたします。【二つ目の言い方】
+
+    **`________________________________________________________________________` **。
 
 23. 怖がらないで、私がついているから。
 
-    **翻译：**`________________________________________________________________________` **。**
+    **`________________________________________________________________________` **。
 
 24. おそらく今でも彼はまだ知りません。
 
-    **翻译：**`________________________________________________________________________` **。**
+    **`________________________________________________________________________` **。
 
 25. 私は中国で五年間暮らして、愛着があります。
 
-    **翻译：**`________________________________________________________________________` **。**
+    **`________________________________________________________________________` **。
 
 26. あいにく雨に降られて、興ざめだ。
 
-    **翻译：**`________________________________________________________________________` **。**
+    **`________________________________________________________________________` **。
 
 27. 貴社の益々のご発展を心よりお祈りいたします。
 
-    **翻译：**`________________________________________________________________________` **。**
+    **`________________________________________________________________________` **。
 
 28. 最近元気そうですね。
 
-    **翻译：**`________________________________________________________________________` **。**
+    **`________________________________________________________________________` **。
 
 29. 彼はアメリカ人の嫁をもらいました。
 
-    **翻译：**`________________________________________________________________________` **。**
+    **`________________________________________________________________________` **。
 
 30. 私はこのようなごまをする人が嫌いです。
 
-    **翻译：**`________________________________________________________________________` **。**
+    **`________________________________________________________________________` **。
 
 31. 大丈夫 gǎn zuò gǎn dāng ( `________` ) 。
 
-32. 我来上课时，我先生帮我 kān hái zi ( `________` ) 。
+32.  这个人真 shāng nǎo jīn ( `________` ) 。
 
-33. 我们公司在中国做了一项 wèn juàn diào chá ( `________________` ) 。
+33.  他 liàn liàn bù shě ( `________` ) 地将游戏机还给了小朋友。
 
-34. 我不是 chuī niú ( `________` ) ，我 chuī kǒu qín ( `________________` ) 可厉害了。
+34.  gǎn wèn lù zài hé fāng ( `________` ) 。
 
-35. 退休以后没有人 chuī pěng ( `________` ) 了，他不免有些失落。
+35.  他是一个很 yǒng gǎn ( `________` ) 的人。
 
-36. 听到家乡发生大地震的消息，我心里 qī shàng bā xià ( `________________` ) 的，不知家里是否一切平安。
+36.  我不敢对 lǐng dǎo ( `________` ) 说。
 
-37. 请明天凭这张 dān zi ( `________` ) 提货。
+37.  我怕迟到，不敢 shuì lǎn jiào ( `________` ) 。
 
-38. 从 zhàng hù ( `________` ) 上提了一笔钱。
+38.  我不敢对他说出 shí qíng  ( `________` ) 。
 
-39. 很高兴能够聆听您的 gāo jiàn ( `________` ) 。
+39.  这样做 shāng le tā de xīn ( `________` ) 。
 
-40. 我没 tīng shuō ( `________` ) 过这件事。
+40.  犯了错误后，李明在班上做了深刻的 jiǎn tǎo ( `________` ) 。
 
-41. 这种商品 jiào hǎo bú jiào zuò ( `________________________` ) 。
+41.  防疫不是请客吃饭，隔离不能 tǎo jià hái jià ( `________` ) 。
 
-42. 我好心去他家，没想到 bāng le dào máng ( `________________________` ) ，反而添了很多麻烦。
+37.  雷锋精神就是 lè yú zhù rén ( `________` ) 。
 
-43. 他在工作上敢于 tiāo zhòng dàn ( `____________` ) 。
+38.  现在并没有任何证据能够证明孙杨服用了 xīng fèn jì ( `________` ) ，被禁赛的原因是他拒绝配合检查。
 
-44. 他们村子里的一切都被洪水卷走了，只好 bèi jǐng lí xiāng ( `________________` ) 去讨生活。
+39.  全班同学早就集合好，xìng zhì bó bó ( `________` ) 地向露营地进发了。
 
-45. 他吹灭了生日蛋糕上的 là zhú ( `________` ) 。
+40.  A：你汉语说得也太好了，完全听不出来是个外国人，你太厉害了。
 
-46. サッカーの試合を見る ⇒  ( `____________` ) 
+    B：哪有，您过奖了，真是 bù gǎn dāng ( `________` ) 啊。
 
-47. 見下す・見くびる ⇒  ( `____________` ) 
+41.  经常熬夜会导致自身免疫功能下降，就 ài gǎn mào ( `________` ) 。
 
-48. 背中 ⇒  ( `____________` ) 
+42.  纽约一处地铁站内发生火灾，已造成1人死亡16人 shòu shāng ( `________` ) 。
 
-49. 裏切る ⇒  ( `____________` ) 
+43.  雅马哈是世界上最大的 yuè qì ( `________` ) 制造商。
 
-50. 偏食する ⇒  ( `____________` ) 
+44.  获悉病毒蛋白质 jié gòu ( `________` ) 有助于研发针对性药物。
 
-51. 駅 ⇒  ( `____________` ) 
+45.  五脏是哪五脏？ ( `________` ) 。
 
-52. 開催する ⇒  ( `____________` ) 
+46.  絆創膏 ⇒ ( `________` ) 
 
-53. 休暇になる ⇒  ( `____________` ) 
+47.  シンフォニー・オーケストラ ⇒ ( `________` ) 
 
-54. 音楽全般 ⇒  ( `____________` ) 
+48.  不倫 ⇒ ( `________` ) 
 
-55. 口笛を吹く ⇒  ( `____________` ) 
+49.  片思い ⇒ ( `________` ) 
 
-56. 乞食 ⇒  ( `____________` ) 
+50.  憎むべし ⇒ ( `________` ) 
 
-57. 振り売りをする ⇒  ( `____________` ) 
+51.  可哀そう ⇒ ( `________` ) 
 
-58. 喝采する ⇒  ( `____________` ) 
+52.  ごまをする ⇒ ( `________` ) 
 
-59. よろしく伝える ⇒  ( `____________` ) 
+53.  機嫌を取る ⇒ ( `________` ) 
 
-60. 引っかかる・騙される ⇒  ( `____________` ) 
+54.  彼はボスが怖いです。 ⇒ ( `________` ) 
+
+55.  彼のボスは怖いです。 ⇒ ( `________` ) 
