--- a/md/SSPW001/riki/02A.md
+++ b/md/SSPW001/riki/02A.md
@@ -1,4 +1,4 @@
-# 第一章测试：举手投足
+# 第二章测试：喜怒哀乐
 
 
 
@@ -6,178 +6,58 @@
 
 ## 答案
 
-1. `2分` C
-
-2. `2分` B
-
-3. `2分` C
-
-4. `2分` A
-
-5. `2分` C
-
-6. `2分` 看望
-
-7. `2分` 短见
-
-8. `2分` 鸡蛋里挑骨头
-
-9. `2分` 背过身去
-
-10. `2分` 说三道四
-
-11. `1分` 从账户上提了一笔钱。
-
-12. `1分` 请明天凭这张单子提货。
-
-13. `1分` 我需要一点儿提示。
-
-14. `1分` 我提醒你，再迟到就要扣你工资了。
-
-15. `1分` 这次比赛他得了倒数第３名。
-
-16. `1分` 我们大学毕业以后，常常见面。
-
-17. `1分` 这件事你怎么看？
-
-18. `1分` 价格高低要看买的人多不多。
-
-19. `1分` 请接受我最诚挚的问候。
-
-20. `1分` 如有变化，请提前告诉我。
-
-21. `1分` 以后要向您多多讨教。
-
-    `1分` 以后要请您多多指教。
-
-22. `1分` 别害怕，有我在。
-
-23. `1分` 恐怕到现在他还不知道。
-
-24. `1分` 我在中国住了五年，对那里产生了感情。
-
-25. `1分` 不巧遇上了大雨，真扫兴。
-
-26. `1分` 祝贵公司事业兴旺。
-
-27. `1分` 最近看上去好精神。
-
-28. `1分` 他讨（娶）了一个美国老婆。
-
-29. `1分` 我很讨厌这种拍马屁的人。
-
-30. `2分` 敢做敢当
-
-31. `2分` 看孩子
-
-32. `2分` 问卷调查
-
-33. `1分` 吹牛
-
-    `1分` 吹口琴
-
-34. `2分` 吹捧
-
-35. `2分` 七上八下
-
-36. `2分` 单子
-
-37. `2分` 账户
-
-38. `2分` 高见
-
-39. `2分` 听说
-
-40. `2分` 叫好不叫座
-
-41. `2分` 帮了倒忙
-
-42. `2分` 挑重担
-
-43. `2分` 背井离乡
-
-44. `2分` 蜡烛
-
-45. `2分` 看足球
-
-46. `2分` 小看、看不起
-
-47. `2分` 后背
-
-48. `2分` 背叛
-
-49. `2分` 挑食
-
-50. `2分` 站、车站
-
-51. `2分` 举办
-
-52. `2分` 放假、休假
-
-53. `2分` 吹拉弹唱
-
-54. `2分` 吹口哨
-
-55. `2分` 叫花子、叫化子、乞丐、要饭的
-
-56. `2分` 叫卖
-
-57. `2分` 叫好、喝**彩**
-
-58. `2分` 问好
-
-59. `2分` 上当
-
-
-
-## 听力原文
-
-1. 小李，昨天喝酒时，大家提到你了。你跟小王什么时候结婚啊？
-
-   我们打算下个月在老家举行婚礼，正准备通知大家呢。
-
-2. 小李，听说你跟小王上个月去冲绳旅游了？
-
-   嗨，别提了！都怪台风登陆，冲绳旅游告吹了。
-
-3. 小李看上了同班同学，可是一直不敢向她表白。这件事你怎么看？
-
-   你是说小陈吗？她会说６门外语呢，追她的人太多，她都该挑花眼了，我不看好小李。
-
-4. 这次才考了第７名，如果明年还拿不到奖学金，这日子怎么过啊。王哥，你帮我拿个主意吧。
-
-   小李啊，在这件事上，你不要背什么思想包袱，学东西不能死记硬背，还是要了解其中的道理。下次加油，还有机会。
-
-5. 小李，你脸色很难看，去看过医生了吗？
-
-   哦，我今天去看牙了，刚拔完牙，脸还肿着呢。明天去复诊。
-
-6. 他每年春节回老家看望父母。
-
-7. 她实在没有出路，就寻了短见。
-
-8. 他能做到这一步就很不错了，你别鸡蛋里挑骨头了。
-
-9. 我要换衣服，你背过身去。
-
-10. 有意见，请当面提出来，不要在背后说三道四。
-
-11. 从账户上提了一笔钱。
-
-12. 请明天凭这张单子提货。
-
-13. 我需要一点儿提示。
-
-14. 我提醒你，再迟到就要扣你工资了。
-
-15. 这次比赛他得了倒数第３名。
-
-16. 我们大学毕业以后，常常见面。
-
-17. 这件事你怎么看？
-
-18. 价格高低要看买的人多不多。
-
-19. 请接受我最诚挚的问候。
-
-20. 如有变化，请提前告诉我。
+1. `2分` 看到她伤心的样子，我真的 **不知所措** 。
+2. `2分` 他每天总是乐呵呵的，**无忧无虑，令人羡慕** 。
+3. `2分` **祝你生日快乐**！
+4. `2分` 他们组织了一个 **摇滚乐队** 。
+5. `2分` 他贪图享乐，**不可救药** 。
+6. `2分` 你要学会享受生活的乐趣。
+7. `2分` 我很怀念大学时代的生活。
+8. `2分` 爱惜时间就是爱惜生命。
+9. `2分` 他特好色，简直是一头色狼。
+10. `2分` 像他这样的人，很讨人喜欢。
+11. `2分` 常常熬夜太伤身体了。
+12. `2分` 他们谈了８年恋爱才结婚。
+13. `2分` 喝杯咖啡提提神吧。
+14. `2分` 他的眼神有点不对劲啊。
+15. `2分` 振兴体育事业。
+16. `1分` 以后要向您多多讨教。
+17. `1分` 以后要请您多多指教。
+18. `1分` 别害怕，有我在。
+19. `1分` 恐怕到现在他还不知道。
+20. `1分` 我在中国住了五年，对那里产生了感情。
+21. `1分` 不巧遇上了大雨，真扫兴。
+22. `1分` 祝贵公司事业兴旺。
+23. `1分` 最近看上去好精神。
+24. `1分` 他讨（娶）了一个美国老婆。
+25. `1分` 我很讨厌这种拍马屁的人。
+26. `2分` 敢做敢当
+27. `2分` 伤脑筋
+28. `2分` 恋恋不舍
+29. `2分` 敢问路在何方
+30. `2分` 勇敢
+31. `2分` 领导
+32. `2分` 睡懒觉
+33. `2分` 实情
+34. `2分` 伤了她的心
+35. `2分` 检讨
+36. `2分` 讨价还价
+37. `2分` 乐于助人
+38. `2分` 兴奋剂
+39. `2分` 兴致勃勃
+40. `2分` 不敢当
+41. `2分` 爱感冒
+42. `2分` 受伤
+43. `2分` 乐器
+44. `2分` 结构
+45. `2分` 心肝脾肺肾
+46. `2分` 创可贴
+47. `2分` 交响乐
+48. `2分` 婚外恋
+49. `2分` 单相思
+50. `2分` 可恨
+51. `2分` 可怜
+52. `2分` 拍马屁
+53. `2分` 讨人喜欢
+54. `2分` 他很怕他的老板。
+55. `2分` 他的老板很可怕。
